force-app/main/default/objects/Partner_Relation__c/Partner_Relation__c.object-meta.xml
<CustomObject>
    <description>PRIT25-749</description>
    <label>Partner Relation</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Partner Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>