force-app/main/default/objects/Partner_Relation__c/fields/CDM_Area__c.field-meta.xml
<CustomField>
    <fullName>CDM_Area__c</fullName>
    <description>This field directly gets value from the Related Partner Account Lokup.</description>
    <formula>Partner_Account__r.ETM_Area__c</formula>
    <label>CDM Area</label>
    <type>Text</type>
</CustomField>