force-app/main/default/objects/Partner_Relation__c/fields/CDM_Region__c.field-meta.xml
<CustomField>
    <fullName>CDM_Region__c</fullName>
    <formula>Partner_Account__r.ETM_Region__c</formula>
    <label>CDM Region</label>
    <type>Text</type>
</CustomField>