force-app/main/default/objects/Partner_Relation__c/fields/CDM_Territory__c.field-meta.xml
<CustomField>
    <fullName>CDM_Territory__c</fullName>
    <formula>Partner_Account__r.ETM_Territory__c</formula>
    <label>CDM Territory</label>
    <type>Text</type>
</CustomField>