force-app/main/default/objects/Partner_Relation__c/fields/CDM_Theatre__c.field-meta.xml
<CustomField>
    <fullName>CDM_Theatre__c</fullName>
    <description>this field gets value directly from Partner Account on Partner Relations</description>
    <formula>Partner_Account__r.ETM_Theatre__c</formula>
    <label>CDM Theatre</label>
    <type>Text</type>
</CustomField>