force-app/main/default/objects/Partner_Relation__c/fields/Focus_Flag1__c.field-meta.xml
<CustomField>
    <fullName>Focus_Flag1__c</fullName>
    <formula>IF(
NOT(Opportunity__r.IsClosed),
Partner_Account__r.Focused_Partner__c,
Focus_Flag__c 
)</formula>
    <label>(Deprecate) Focus Flag</label>
    <type>Checkbox</type>
</CustomField>