force-app/main/default/objects/Partner_Relation__c/fields/Focus_Flag__c.field-meta.xml
<CustomField>
    <fullName>Focus_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The value of this field depends on the record of account lookup field.</description>
    <label>(Deprecate) Focus Flag</label>
    <type>Checkbox</type>
</CustomField>