force-app/main/default/objects/Partner_Relation__c/fields/GPO_Designation__c.field-meta.xml
<CustomField>
    <fullName>GPO_Designation__c</fullName>
    <description>This formula fetches the GPO designation from partner account if opp is not stage 7</description>
    <formula>TEXT(Partner_Account__r.GPO_Designation__c)</formula>
    <label>GPO Designation</label>
    <type>Text</type>
</CustomField>