force-app/main/default/objects/Partner_Relation__c/fields/Influence_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Influence_Sub_Type__c</fullName>
    <label>Influence Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Involvement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alliance Partner Sourced</fullName>
            </value>
            <value>
                <fullName>Post-Sales Service Delivery</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Executive Introduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>