force-app/main/default/objects/Partner_Relation__c/fields/Involvement_Type__c.field-meta.xml
<CustomField>
    <fullName>Involvement_Type__c</fullName>
    <description>This field represents the type of partner relationship associated with a Partner Relation record (PRIT25-749)</description>
    <label>Involvement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transacting Partner</fullName>
            </value>
            <value>
                <fullName>Sourcing Partner</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Incumbent Partner</fullName>
            </value>
            <value>
                <fullName>Teaming Partner</fullName>
            </value>
            <value>
                <fullName>TAP Alliance</fullName>
            </value>
            <value>
                <fullName>Influence Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>