force-app/main/default/objects/Partner_Relation__c/fields/National_Flag1__c.field-meta.xml
<CustomField>
    <fullName>National_Flag1__c</fullName>
    <formula>IF(
    NOT(Opportunity__r.IsClosed),
    Partner_Account__r.National_Partner__c,
    National_Flag__c
)</formula>
    <label>(Deprecate) National Flag</label>
    <type>Checkbox</type>
</CustomField>