force-app/main/default/objects/Partner_Relation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the value of related opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Partner Relations</relationshipLabel>
    <relationshipName>Partner_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>