force-app/main/default/objects/Partner_Relation__c/fields/Opportunity_Country__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Country__c</fullName>
    <formula>Opportunity__r.Account.BillingCountry</formula>
    <label>Opportunity Country</label>
    <type>Text</type>
</CustomField>