force-app/main/default/objects/Partner_Relation__c/fields/Opportunity_ETM_Theatre__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ETM_Theatre__c</fullName>
    <formula>Opportunity__r.ETM_Theatre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ETM Theatre</label>
    <type>Text</type>
</CustomField>