force-app/main/default/objects/Partner_Relation__c/fields/Opportunity_Is_child_Renewal_split__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Is_child_Renewal_split__c</fullName>
    <description>SAL26-72</description>
    <formula>Opportunity__r.Is_child_Renewal_split__c</formula>
    <label>Opportunity - Is child Renewal split</label>
    <type>Checkbox</type>
</CustomField>