force-app/main/default/objects/Partner_Relation__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>SAL26-72</description>
    <formula>TEXT(Opportunity__r.Opportunity_Type__c)</formula>
    <label>Opportunity_Type</label>
    <type>Text</type>
</CustomField>