force-app/main/default/objects/Partner_Relation__c/fields/Parent_Partner_Relation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Partner_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Partner Relation</label>
    <referenceTo>Partner_Relation__c</referenceTo>
    <relationshipLabel>Partner Relations</relationshipLabel>
    <relationshipName>Partner_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>