force-app/main/default/objects/Partner_Relation__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field stores the record of Partner Account (PRIT25-749)</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Relations</relationshipLabel>
    <relationshipName>Partner_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>