force-app/main/default/objects/Partner_Relation__c/fields/SDP_Sub_Type1__c.field-meta.xml
<CustomField>
    <fullName>SDP_Sub_Type1__c</fullName>
    <formula>IF(
    NOT(Opportunity__r.IsClosed), 
    TEXT(Partner_Account__r.MSP_Sub_Type__c), 
    TEXT(SDP_Sub_Type__c)
)</formula>
    <label>SDP Sub-Type</label>
    <type>Text</type>
</CustomField>