force-app/main/default/objects/Partner_Relation__c/fields/SDP_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>SDP_Sub_Type__c</fullName>
    <description>The value of this field depends on the record of account lookup field.</description>
    <label>SDP Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>GSI</fullName>
            </value>
            <value>
                <fullName>GSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>