force-app/main/default/objects/Partner_Relation__c/fields/Titan__c.field-meta.xml
<CustomField>
    <fullName>Titan__c</fullName>
    <description>This value is directly taken from Partner account on the Partner Relation</description>
    <formula>Partner_Account__r.Titan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Titan</label>
    <type>Checkbox</type>
</CustomField>